--- a/proj1/makefile
+++ b/proj1/makefile
@@ -9,9 +9,9 @@ DEPS = rmdup.h lsdir.h
 all: rmdup lsdir
 
 rmdup: rmdup.c 
-	$(CC) $(CFLAGS) -o rmdup rmdup.c 
+	$(CC) $(CFLAGS) -o bin/rmdup rmdup.c 
 
 lsdir: lsdir.c
-	$(CC) $(CFLAGS) -o lsdir lsdir.c
+	$(CC) $(CFLAGS) -o bin/lsdir lsdir.c
 
-clean: $(RM) rmdup bin/*.o *~
+clean: $(RM) bin/* 
