Created start_generator function.

--- a/proj2/makefile
+++ b/proj2/makefile
@@ -2,10 +2,10 @@ CC=gcc
 CFLAGS=-I 
 
 parque: clean gerador
-	$(CC) park.c -o parque
+	$(CC) park.c -o parque -pthread
 
 gerador: 
-	$(CC) generator.c -o gerador
+	$(CC) generator.c -o gerador -pthread
 
 clean: 
 	rm -f parque gerador
